--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "4.0.2-redf",
+    "version": "4.0.1-redf",
     "name": "cordova-launch-review",
     "cordova_name": "Launch Review",
     "description": "Cordova/Phonegap plugin for iOS and Android to assist in leaving user reviews/ratings in the App Stores.",
@@ -44,5 +44,6 @@
         "review",
         "rating",
         "app store"
-    ]
+    ],
+    "dependencies": {}
 }
